tests/transpiler/x/fortran/count_builtin.error
exit status 1
/workspace/mochi/tests/transpiler/x/fortran/count_builtin.f90:3:22:

    3 |   print '(I0)', count((/ 1, 2, 3 /))
      |                      1
Error: ‘mask’ argument of ‘count’ intrinsic at (1) must be a logical array
