tests/transpiler/x/fortran/count_builtin.f90
program main
  implicit none
  print '(I0)', count((/ 1, 2, 3 /))
end program main
